# LazyFoo-SDL2-Learning

./: README.md  meson.build
01_hello_SDL/: 01_hello_SDL.cpp
02_getting_an_image_on_the_screen/: meson.build
10_color_keying/: meson.build
17_mouse_events/: 17_mouse_events.cpp
20_force_feedback/: meson.build
35_window_events/: 35_window_events.cpp
37_multiple_displays/: 37_multiple_displays.cpp
45_timer_callbacks/: 45_timer_callbacks.cpp
46_multithreading/: 46_multithreading.cpp
51_SDL_and_modern_opengl/: meson.build
52_hello_mobile/: 52_hello_mobile.cpp
53_extensions_and_changing_orientation/: 53_extensions_and_changing_orientation.cpp
54_touches/: 54_touches.cpp
55_multitouch/: 55_multitouch.cpp
