project('lazyfoo-sdl2', 'c', 'cpp', version : '0.0.1', license : 'LGPL')

cc = meson.get_compiler('c')
sdl2_dep = dependency('sdl2')
sdl2_image_dep = dependency('SDL2_image')
sdl2_ttf_dep = dependency('SDL2_ttf')
sdl2_mixer_dep = dependency('SDL2_mixer')

fs = import('fs')

subdir('01_hello_SDL')
subdir('02_getting_an_image_on_the_screen')
subdir('03_event_driven_programming')
subdir('04_key_presses')
subdir('05_optimized_surface_loading_and_soft_stretching')
subdir('06_extension_libraries_and_loading_other_image_formats')
subdir('07_texture_loading_and_rendering')
subdir('08_geometry_rendering')
subdir('09_the_viewport')
subdir('10_color_keying')
subdir('11_clip_rendering_and_sprite_sheets')
subdir('12_color_modulation')
subdir('13_alpha_blending')
subdir('14_animated_sprites_and_vsync')
subdir('15_rotation_and_flipping')
subdir('16_true_type_fonts')
subdir('17_mouse_events')
subdir('18_key_states')
subdir('19_gamepads_and_joysticks')
subdir('20_force_feedback')
subdir('21_sound_effects_and_music')
subdir('22_timing')
subdir('23_advanced_timers')
subdir('24_calculating_frame_rate')
subdir('25_capping_frame_rate')
subdir('26_motion')
