project('lazyfoo-sdl2', 'c', 'cpp', version : '0.0.1', license : 'LGPL')

cc = meson.get_compiler('c')
sdl2_dep = dependency('sdl2')
sdl2_image_dep = dependency('SDL2_image')
sdl2_ttf_dep = dependency('SDL2_ttf')
sdl2_mixer_dep = dependency('SDL2_mixer')

fs = import('fs')

subdir('01_hello_SDL')
subdir('02_getting_an_image_on_the_screen')
subdir('03_event_driven_programming')
subdir('04_key_presses')
subdir('05_optimized_surface_loading_and_soft_stretching')
subdir('06_extension_libraries_and_loading_other_image_formats')
subdir('07_texture_loading_and_rendering')
subdir('08_geometry_rendering')
subdir('09_the_viewport')
subdir('10_color_keying')
subdir('11_clip_rendering_and_sprite_sheets')
subdir('12_color_modulation')
subdir('13_alpha_blending')
subdir('14_animated_sprites_and_vsync')
subdir('15_rotation_and_flipping')
subdir('16_true_type_fonts')
subdir('17_mouse_events')
subdir('18_key_states')
subdir('19_gamepads_and_joysticks')
subdir('20_force_feedback')
subdir('21_sound_effects_and_music')
subdir('22_timing')
subdir('23_advanced_timers')
subdir('24_calculating_frame_rate')
subdir('25_capping_frame_rate')
subdir('26_motion')
subdir('27_collision_detection')
subdir('28_per-pixel_collision_detection')
subdir('29_circular_collision_detection')
subdir('30_scrolling')
subdir('31_scrolling_backgrounds')
subdir('32_text_input_and_clipboard_handling')
subdir('33_file_reading_and_writing')
subdir('34_audio_recording')
subdir('35_window_events')
subdir('36_multiple_windows')
subdir('37_multiple_displays')
subdir('38_particle_engines')
subdir('39_tiling')
subdir('40_texture_manipulation')
subdir('41_bitmap_fonts')
subdir('42_texture_streaming')
subdir('43_render_to_texture')
subdir('44_frame_independent_movement')
subdir('45_timer_callbacks')
subdir('46_multithreading')
subdir('47_semaphores')
subdir('48_atomic_operations')
subdir('49_mutexes_and_conditions')
#subdir('50_SDL_and_opengl_2')
#subdir('51_SDL_and_modern_opengl')
subdir('52_hello_mobile')
subdir('53_extensions_and_changing_orientation')
subdir('54_touches')
subdir('55_multitouch')